--- a/t.html
+++ b/t.html
@@ -55,14 +55,6 @@
             <form id="trip-form" class="space-y-6">
                 <!-- Screen 1: Trip Details -->
                 <div id="screen-details" class="form-screen active space-y-6">
-                    <!-- New input field for source, as this is now required by the backend -->
-                    <div>
-                        <label for="source" class="block text-sm font-medium text-slate-700 mb-2">Source of Trip
-                            Request</label>
-                        <input type="text" id="source" name="source" placeholder="e.g., website, friend, social media"
-                            required
-                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
-                    </div>
                     <div>
                         <label for="destination"
                             class="block text-sm font-medium text-slate-700 mb-2">Destination</label>
@@ -256,8 +248,6 @@
             const budgetSlider = document.getElementById('budget-slider');
 
             const destination = document.getElementById('destination').value;
-            // Get the value from the new source input field
-            const source = document.getElementById('source').value;
 
             const tripData = {
                 destination: destination,
@@ -266,9 +256,7 @@
                 duration: durationInDays,
                 travelers: parseInt(document.getElementById('travelers').value),
                 interests: Array.from(document.querySelectorAll('input[name="interests"]:checked')).map(cb => cb.value),
-                budget: parseInt(budgetSlider.value),
-                // Add the source to the data sent to the backend
-                source: source
+                budget: parseInt(budgetSlider.value)
             };
 
             try {
