--- a/temp copy/trip.html
+++ b/temp copy/trip.html
@@ -28,75 +28,16 @@
         .form-screen.active {
             display: block;
         }
-
-        /* ====== Glassmorphism + Sky theme (paste into <head> of every file) ====== */
-        :root {
-            --glass-bg: rgba(255, 255, 255, 0.12);
-            --glass-border: rgba(255, 255, 255, 0.25);
-            --sky-400: #38bdf8;
-            --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
-            --dark-blue-800: #1e293b;
-        }
-
-        body {
-            font-family: "Inter", sans-serif;
-            background: linear-gradient(135deg, var(--dark-blue-900), var(--dark-blue-800), var(--sky-500));
-            min-height: 100vh;
-            -webkit-font-smoothing: antialiased;
-            color: #f1f5f9;
-            /* white-ish text for contrast */
-        }
-
-        /* Glass panels */
-        .glass-panel {
-            background: var(--glass-bg);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
-        }
-
-        /* Stronger glass for cards */
-        .glass-card {
-            background: rgba(255, 255, 255, 0.18);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.28);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        /* Buttons */
-        .glass-btn-sky {
-            background: linear-gradient(90deg, var(--sky-400), var(--sky-500));
-            color: white;
-            border-radius: 9999px;
-            padding: 0.75rem 1.75rem;
-            font-weight: 600;
-            box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            transition: all 0.25s ease-in-out;
-        }
-
-        .glass-btn-sky:hover {
-            filter: brightness(1.08);
-            transform: translateY(-2px);
-        }
-
-        /* Headings */
-        .text-sky {
-            color: var(--sky-400) !important;
-        }
     </style>
 </head>
 
 <body class="flex flex-col min-h-screen bg-slate-50 text-slate-800">
 
     <div class="flex-grow flex items-center justify-center p-4 sm:p-6 bg-pattern">
-        <div class="w-full max-w-2xl mx-auto glass-panel rounded-3xl shadow-2xl p-6 sm:p-10 border border-slate-200">
+        <div class="w-full max-w-2xl mx-auto bg-white rounded-3xl shadow-2xl p-6 sm:p-10 border border-slate-200">
             <header class="text-center mb-8">
                 <div
-                    class="mx-auto inline-flex items-center space-x-2 text-indigo-600 glass-card-100 rounded-full px-4 py-1">
+                    class="mx-auto inline-flex items-center space-x-2 text-indigo-600 bg-indigo-100 rounded-full px-4 py-1">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M12 18s-4-6-4-8a4 4 0 0 1 8 0c0 2-4 8-4 8z" />
@@ -116,39 +57,40 @@
                 <div id="screen-details" class="form-screen active space-y-6">
                     <!-- New input field for source, as this is now required by the backend -->
                     <div>
-                        <label for="source" class="block text-sm font-medium text-slate-700 mb-2">Source</label>
+                        <label for="source" class="block text-sm font-medium text-slate-700 mb-2">Source of Trip
+                            Request</label>
                         <input type="text" id="source" name="source" placeholder="e.g., website, friend, social media"
                             required
-                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-sky-500 focus:outline-none transition-colors">
+                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
                     </div>
                     <div>
                         <label for="destination"
                             class="block text-sm font-medium text-slate-700 mb-2">Destination</label>
                         <input type="text" id="destination" name="destination" required
-                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-sky-500 focus:outline-none transition-colors">
+                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
                     </div>
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                         <div>
                             <label for="start-date" class="block text-sm font-medium text-slate-700 mb-2">Start
                                 Date</label>
                             <input type="date" id="start-date" name="startDate" required
-                                class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-sky-500 focus:outline-none transition-colors">
+                                class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
                         </div>
                         <div>
                             <label for="end-date" class="block text-sm font-medium text-slate-700 mb-2">End Date</label>
                             <input type="date" id="end-date" name="endDate" required
-                                class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-sky-500 focus:outline-none transition-colors">
+                                class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
                         </div>
                     </div>
                     <div>
                         <label for="travelers" class="block text-sm font-medium text-slate-700 mb-2">Number of
                             Travelers</label>
                         <input type="number" id="travelers" name="travelers" value="1" min="1" required
-                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-sky-500 focus:outline-none transition-colors">
+                            class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:outline-none transition-colors">
                     </div>
                     <div class="mt-6 flex justify-end">
                         <button type="button" onclick="goToScreen('screen-interests')"
-                            class="px-6 py-2 text-white font-semibold rounded-full shadow-md glass-btn-sky transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                            class="px-6 py-2 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             Next
                         </button>
                     </div>
@@ -169,7 +111,7 @@
                             Back
                         </button>
                         <button type="button" onclick="goToScreen('screen-budget')"
-                            class="px-6 py-2 text-white font-semibold rounded-full shadow-md glass-btn-sky transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                            class="px-6 py-2 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             Next
                         </button>
                     </div>
@@ -188,7 +130,7 @@
                             </label>
                             <input type="range" id="budget-slider" name="budget" min="10000" max="150000" value="50000"
                                 step="1000"
-                                class="w-full h-2 glass-card100 rounded-lg appearance-none cursor-pointer range-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                                class="w-full h-2 bg-indigo-100 rounded-lg appearance-none cursor-pointer range-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         </div>
                     </div>
                     <div class="flex justify-between mt-6">
@@ -197,7 +139,7 @@
                             Back
                         </button>
                         <button type="submit"
-                            class="px-6 py-2 glass-card600 text-white font-semibold rounded-full shadow-md hover:glass-card700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                            class="px-6 py-2 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             Generate My Itinerary
                         </button>
                     </div>
@@ -238,7 +180,7 @@
             <p id="error-message" class="mt-2 text-sm text-slate-500">Please try again later or check your network
                 connection.</p>
             <button id="close-modal-btn"
-                class="mt-6 px-6 py-2 glass-card600 text-white font-semibold rounded-full shadow-md hover:glass-card700 transition-colors duration-200">
+                class="mt-6 px-6 py-2 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200">
                 OK
             </button>
         </div>
@@ -274,7 +216,7 @@
             container.innerHTML = interestOptions.map(option => `
                 <label class="flex flex-col items-center justify-center p-4 rounded-xl border border-slate-300 cursor-pointer transition-colors hover:bg-slate-100">
                     <input type="checkbox" name="interests" value="${option.name}" class="sr-only peer">
-                    <div class="w-12 h-12 text-indigo-500 flex items-center justify-center glass-card100 rounded-full mb-2 peer-checked:glass-card600 peer-checked:text-white transition-colors duration-200">
+                    <div class="w-12 h-12 text-indigo-500 flex items-center justify-center bg-indigo-100 rounded-full mb-2 peer-checked:bg-indigo-600 peer-checked:text-white transition-colors duration-200">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-${option.icon}">
                             <title>${option.name}</title>
                         </svg>
@@ -415,7 +357,7 @@
             container.innerHTML = interestOptions.map(option => `
             <label class="flex flex-col items-center justify-center p-4 rounded-xl border border-slate-300 cursor-pointer transition-colors hover:bg-slate-100">
                 <input type="checkbox" name="interests" value="${option.name}" class="sr-only peer">
-                <div class="w-12 h-12 text-indigo-500 flex items-center justify-center glass-card100 rounded-full mb-2 peer-checked:glass-card600 peer-checked:text-white transition-colors duration-200">
+                <div class="w-12 h-12 text-indigo-500 flex items-center justify-center bg-indigo-100 rounded-full mb-2 peer-checked:bg-indigo-600 peer-checked:text-white transition-colors duration-200">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-${option.icon}">
                         <title>${option.name}</title>
                     </svg>
@@ -518,11 +460,7 @@
             document.getElementById('end-date').setAttribute('min', today);
         });
     </script> -->
-    <!-- Development version -->
-<script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
-<!-- Production version -->
-<script src="https://unpkg.com/lucide@latest"></script>
     <script>
         const backendUrl = "http://127.0.0.1:8000/api/generate-itinerary";
 
@@ -537,7 +475,7 @@
         }
 
         const interestOptions = [
-            { name: 'Sightseeing', icon: 'fa-solid fa-binoculars' },
+            { name: 'Sightseeing', icon: 'binoculars' },
             { name: 'Foodie', icon: 'utensils' },
             { name: 'Adventure', icon: 'mountain' },
             { name: 'Relaxation', icon: 'sun' },
@@ -553,7 +491,7 @@
             container.innerHTML = interestOptions.map(option => `
         <label class="flex flex-col items-center justify-center p-4 rounded-xl border border-slate-300 cursor-pointer transition-colors hover:bg-slate-100">
             <input type="checkbox" name="interests" value="${option.name}" class="sr-only peer">
-            <div class="w-12 h-12 text-indigo-500 flex items-center justify-center glass-card100 rounded-full mb-2 peer-checked:glass-card600 peer-checked:text-white transition-colors duration-200">
+            <div class="w-12 h-12 text-indigo-500 flex items-center justify-center bg-indigo-100 rounded-full mb-2 peer-checked:bg-indigo-600 peer-checked:text-white transition-colors duration-200">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-${option.icon}">
                     <title>${option.name}</title>
                 </svg>
