--- a/temp copy/booking.html
+++ b/temp copy/booking.html
@@ -8,65 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
     <style>
-        :root {
-            --glass-bg: rgba(255, 255, 255, 0.12);
-            --glass-border: rgba(255, 255, 255, 0.25);
-            --sky-400: #38bdf8;
-            --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
-            --dark-blue-800: #1e293b;
-        }
-
         body {
-            font-family: "Inter", sans-serif;
-            background: linear-gradient(135deg, var(--dark-blue-900), var(--dark-blue-800), var(--sky-500));
-            min-height: 100vh;
-            -webkit-font-smoothing: antialiased;
-            color: #f1f5f9;
-            /* white-ish text for contrast */
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
         }
-
-        /* Glass panels */
-        .glass-panel {
-            background: var(--glass-bg);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
-        }
-
-        /* Stronger glass for cards */
-        .glass-card {
-            background: rgba(255, 255, 255, 0.18);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.28);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        /* Buttons */
-        .glass-btn-sky {
-            background: linear-gradient(90deg, var(--sky-400), var(--sky-500));
-            color: white;
-            border-radius: 9999px;
-            padding: 0.75rem 1.75rem;
-            font-weight: 600;
-            box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            transition: all 0.25s ease-in-out;
-        }
-
-        .glass-btn-sky:hover {
-            filter: brightness(1.08);
-            transform: translateY(-2px);
-        }
-
-        /* Headings */
-        .text-sky {
-            color: var(--sky-400) !important;
-        }
-
-
 
         .card {
             width: 300px;
@@ -91,9 +36,9 @@
 
         .flight-card:hover,
         .hotel-card:hover {
-            box-shadow: 0 0 20px rgba(14, 165, 233, 0.35),
-                0 0 30px rgba(14, 165, 233, 0.34),
-                0 0 40px rgba(14, 165, 233, 0.34);
+            box-shadow: 0 0 20px rgba(59, 130, 246, 0.7),
+                0 0 30px rgba(59, 130, 246, 0.6),
+                0 0 40px rgba(59, 130, 246, 0.5);
             transform: scale(1.05);
         }
 
@@ -136,7 +81,7 @@
         </header>
 
         <!-- Flights Section -->
-        <section id="flights" class="glass-panel p-6 rounded-3xl shadow-lg">
+        <section id="flights" class="bg-white p-6 rounded-3xl shadow-lg">
             <div class="flex items-center justify-between mb-6">
                 <h2 class="text-3xl font-bold text-gray-800">Available Flights</h2>
                 <div class="flex items-center text-gray-500 space-x-2">
@@ -149,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="flight-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
+            <div class="flight-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
                 data-card-type="flight" data-flight-index="0">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
                     <div class="flex items-center space-x-4">
@@ -197,7 +142,7 @@
                     <div class="text-2xl font-bold text-blue-600">₹4,500</div>
                 </div>
             </div>
-            <div class="flight-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
+            <div class="flight-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
                 data-card-type="flight" data-flight-index="1">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
                     <div class="flex items-center space-x-4">
@@ -245,7 +190,7 @@
                     <div class="text-2xl font-bold text-blue-600">₹5,100</div>
                 </div>
             </div>
-            <div class="flight-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
+            <div class="flight-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200"
                 data-card-type="flight" data-flight-index="2">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
                     <div class="flex items-center space-x-4">
@@ -300,7 +245,7 @@
         </section>
 
         <!-- Hotels Section -->
-        <section id="hotels" class="glass-panel p-6 rounded-3xl shadow-lg">
+        <section id="hotels" class="bg-white p-6 rounded-3xl shadow-lg">
             <div class="flex items-center justify-between mb-6">
                 <h2 class="text-3xl font-bold text-gray-800">Available Hotels</h2>
                 <div class="flex items-center text-gray-500 space-x-2">
@@ -318,7 +263,7 @@
 
             <div id="hotels-container">
 
-                <div class="hotel-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
+                <div class="hotel-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
                     data-card-type="hotel" data-hotel-index="0">
                     <div class="w-full md:w-1/3">
                         <div class="w-full h-48 bg-cover bg-center rounded-2xl"
@@ -353,7 +298,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hotel-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
+                <div class="hotel-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
                     data-card-type="hotel" data-hotel-index="1">
                     <div class="w-full md:w-1/3">
                         <div class="w-full h-48 bg-cover bg-center rounded-2xl"
@@ -388,7 +333,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hotel-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
+                <div class="hotel-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200"
                     data-card-type="hotel" data-hotel-index="2">
                     <div class="w-full md:w-1/3">
                         <div class="w-full h-48 bg-cover bg-center rounded-2xl"
@@ -437,7 +382,7 @@
 
     <!-- Error Modal -->
     <div id="error-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full z-50">
-        <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-2xl glass-panel">
+        <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-2xl bg-white">
             <div class="mt-3 text-center">
                 <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-red-100">
                     <svg class="h-6 w-6 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -524,7 +469,7 @@
             // ... (omitting the "no flights" check for brevity)
 
             container.innerHTML = flights.map((flight, index) => `
-        <div class="flight-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200" 
+        <div class="flight-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 cursor-pointer hover:shadow-md transition-all duration-200" 
              data-card-type="flight" data-flight-index="${index}">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
                 <div class="flex items-center space-x-4">
@@ -578,7 +523,7 @@
             }
 
             container.innerHTML = hotels.map((hotel, index) => `
-                <div class="hotel-card glass-card p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200" 
+                <div class="hotel-card bg-gray-50 p-6 rounded-2xl border border-gray-100 mb-6 flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 cursor-pointer hover:shadow-md transition-all duration-200" 
                      data-card-type="hotel" data-hotel-index="${index}">
                     <div class="w-full md:w-1/3">
                         <div class="w-full h-48 bg-gradient-to-br from-blue-100 to-blue-200 rounded-2xl flex items-center justify-center">
