--- a/temp copy/index.html
+++ b/temp copy/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EasyGo: Your Intelligent Travel Architect</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TripsAI: Your Intelligent Travel Architect</title>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Google Fonts: Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide-react@latest/dist/lucide-react.js"></script>
@@ -22,101 +21,42 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
-        :root {
-            --glass-bg: rgba(255, 255, 255, 0.12);
-            --glass-border: rgba(255, 255, 255, 0.25);
-            --sky-400: #38bdf8;
-            --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
-            --dark-blue-800: #1e293b;
-        }
-
         body {
-            font-family: "Inter", sans-serif;
-            background: linear-gradient(135deg, var(--dark-blue-900), var(--dark-blue-800), var(--sky-500));
-            min-height: 100vh;
-            -webkit-font-smoothing: antialiased;
-            color: #f1f5f9;
-            /* light text for dark background */
+            font-family: 'Inter', sans-serif;
+            background-color: #f8fafc;
+            /* slate-50 */
         }
 
-        /* Glass panels */
-        .glass-panel {
-            background: var(--glass-bg);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
+        /* Custom scrollbar for better aesthetics */
+        ::-webkit-scrollbar {
+            width: 8px;
         }
 
-        /* Buttons */
-        .glass-btn-sky {
-            background: linear-gradient(90deg, var(--sky-400), var(--sky-500));
-            color: white;
-            border-radius: 9999px;
-            padding: 0.75rem 1.75rem;
-            font-weight: 600;
-            box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            transition: all 0.25s ease-in-out;
+        ::-webkit-scrollbar-track {
+            background: #f1f5f9;
+            /* slate-100 */
         }
 
-        .glass-btn-sky:hover {
-            filter: brightness(1.08);
-            transform: translateY(-2px);
+        ::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            /* slate-300 */
+            border-radius: 10px;
         }
 
-        /* Headings */
-        .text-sky {
-            color: var(--sky-400) !important;
+        ::-webkit-scrollbar-thumb:hover {
+            background: #94a3b8;
+            /* slate-400 */
         }
 
-
-
-
-        .glass-btn-sky:hover {
-            filter: brightness(1.05);
-            transform: translateY(-2px);
-        }
-
-        /* Card highlight when selected */
-        .interest-card.selected {
-            transform: translateY(-5px);
-            box-shadow: 0 0 0 6px rgba(56, 189, 248, 0.25);
-        }
-
-        /* Slider thumb updated to sky */
-        input[type="range"]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            appearance: none;
-            width: 24px;
-            height: 24px;
-            background: var(--sky-500);
-            cursor: pointer;
-            border-radius: 50%;
-            border: 4px solid white;
-            box-shadow: 0 0 6px rgba(14, 165, 233, 0.35);
-        }
-
-        input[type="range"]::-moz-range-thumb {
-            width: 24px;
-            height: 24px;
-            background: var(--sky-500);
-            cursor: pointer;
-            border-radius: 50%;
-            border: 4px solid white;
-            box-shadow: 0 0 6px rgba(14, 165, 233, 0.35);
-        }
-
-        /* Fade-in animation */
+        /* Animation for screen transitions */
         .screen {
-            animation: fadeIn 0.6s ease-in-out;
+            animation: fadeIn 0.5s ease-in-out;
         }
 
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(15px);
+                transform: translateY(10px);
             }
 
             to {
@@ -124,43 +64,108 @@
                 transform: translateY(0);
             }
         }
+
+        /* Styling for selected cards */
+        .interest-card.selected {
+            transform: translateY(-5px);
+            box-shadow: 0 0 0 3px #3b82f6;
+            /* blue-500 */
+        }
+
+        /* Custom styles for the budget slider */
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 24px;
+            height: 24px;
+            background: #3b82f6;
+            cursor: pointer;
+            border-radius: 50%;
+            border: 4px solid white;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+
+        input[type="range"]::-moz-range-thumb {
+            width: 24px;
+            height: 24px;
+            background: #3b82f6;
+            cursor: pointer;
+            border-radius: 50%;
+            border: 4px solid white;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 
-<body>
+<body class="antialiased">
     <div id="app" class="min-h-screen flex flex-col">
         <!-- Header -->
-        <header class="glass-panel sticky top-0 z-40">
+        <header class="bg-white/80 backdrop-blur-md shadow-sm sticky top-0 z-40">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex items-center justify-between h-16">
                     <div class="flex items-center space-x-3">
-                        <img src="D:\trip\templates\logo.png" alt="EasyGo Logo" class="h-8 w-8 object-contain">
-                        <h1 class="text-2xl font-bold text-white">EasyGo</h1>
+                        <svg class="h-8 w-8 text-blue-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.1-1.1.5l-.3.5c-.2.5-.1 1 .3 1.3L9 12l-2 3H4l-1 1 1 4 2 2h3l1-1-2-3 7 2-4.5 4.5c-.5.5-.5 1.2 0 1.7l.5.5c.5.5 1.2.5 1.7 0l4.5-4.5z" />
+                        </svg>
+                        <h1 class="text-2xl font-bold text-gray-800">TripSAI</h1>
                     </div>
                 </div>
             </div>
         </header>
 
-        <!-- Main Content -->
+        <!-- Main Content Area -->
         <main class="flex-grow">
-            <div id="screens-container" class="max-w-4xl mx-auto p-6 lg:p-10">
-                <!-- Hero -->
+            <!-- All screens are present in the DOM, but only the active one is visible -->
+            <div id="screens-container" class="max-w-4xl mx-auto p-4 sm:p-6 lg:p-8">
+
+                <!-- Screen 1: Welcome / Hero -->
                 <section id="screen-welcome" class="screen text-center">
-                    <div class="glass-panel py-16 sm:py-20 rounded-3xl shadow-xl">
-                        <h2
-                            class="text-4xl sm:text-5xl lg:text-6xl font-extrabold tracking-tight leading-tight text-white">
-                            Your <span class="text-sky">Intelligent</span> Travel Architect
+                    <div class="py-12 sm:py-20">
+                        <h2 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-gray-900 tracking-tight">
+                            Your <span class="text-blue-600">Intelligent</span> Travel Architect
                         </h2>
-                        <p class="mt-6 max-w-2xl mx-auto text-lg text-white/90">
-                            Stop planning, start exploring. EasyGo crafts personalized,
-                            end-to-end itineraries in seconds. Just tell us your dream trip,
-                            and we'll handle the rest.
+                        <p class="mt-6 max-w-2xl mx-auto text-lg text-gray-600">
+                            Stop planning, start exploring. TripsAI crafts personalized, end-to-end itineraries in
+                            seconds. Just tell us your dream trip, and we'll handle the rest.
                         </p>
-                        <button onclick="window.location.href='trip.html'" class="glass-btn-sky mt-8">
+                        <button onclick="window.location.href='trip.html'"
+                            class="inline-flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-full text-white bg-blue-600 hover:bg-blue-700 transition-transform transform hover:scale-105 shadow-lg">
                             Let's Go
                         </button>
                     </div>
                 </section>
+
+
+
+                <!-- Error Modal -->
+                <div id="error-modal"
+                    class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full z-50">
+                    <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+                        <div class="mt-3 text-center">
+                            <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-red-100">
+                                <svg class="h-6 w-6 text-red-600" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-lg leading-6 font-medium text-gray-900">Connection Error</h3>
+                            <div class="mt-2 px-7 py-3">
+                                <p class="text-sm text-gray-500" id="error-message">Could not connect to the TripsAI
+                                    server. Please ensure the backend is running and try again.</p>
+                            </div>
+                            <div class="items-center px-4 py-3">
+                                <button id="close-modal-btn"
+                                    class="px-4 py-2 bg-red-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-300">
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </main>
     </div>
@@ -276,7 +281,7 @@
                 card.dataset.id = interest.id;
 
                 const iconContainer = document.createElement('div');
-                iconContainer.className = 'flex justify-center items-center text-sky-600 mb-2';
+                iconContainer.className = 'flex justify-center items-center text-blue-600 mb-2';
 
                 const iconName = interest.icon;
                 ReactDOM.render(
@@ -378,7 +383,7 @@
 
             } catch (error) {
                 console.error("Failed to generate itinerary:", error);
-                showErrorModal("Could not connect to the EasyGo server. Please make sure the backend API is running and accessible.");
+                showErrorModal("Could not connect to the TripsAI server. Please make sure the backend API is running and accessible.");
                 goToScreen('screen-budget'); // Go back to the previous screen on error
             }
         }
