--- a/temp copy/itinerary copy.html
+++ b/temp copy/itinerary copy.html
@@ -11,64 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide-react@latest/dist/lucide-react.js"></script>
     <style>
-        :root {
-            --glass-bg: rgba(255, 255, 255, 0.12);
-            --glass-border: rgba(255, 255, 255, 0.25);
-            --sky-400: #38bdf8;
-            --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
-            --dark-blue-800: #1e293b;
-        }
-
         body {
-            font-family: "Inter", sans-serif;
-            background: linear-gradient(135deg, var(--dark-blue-900), var(--dark-blue-800), var(--sky-500));
-            min-height: 100vh;
-            -webkit-font-smoothing: antialiased;
-            color: #f1f5f9;
-            /* white-ish text for contrast */
+            font-family: 'Inter', sans-serif;
+            background-color: #f8fafc;
         }
-
-        /* Glass panels */
-        .glass-panel {
-            background: var(--glass-bg);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
-        }
-
-        /* Stronger glass for cards */
-        .glass-card {
-            background: rgba(255, 255, 255, 0.18);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.28);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        /* Buttons */
-        .glass-btn-sky {
-            background: linear-gradient(90deg, var(--sky-400), var(--sky-500));
-            color: white;
-            border-radius: 9999px;
-            padding: 0.75rem 1.75rem;
-            font-weight: 600;
-            box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            transition: all 0.25s ease-in-out;
-        }
-
-        .glass-btn-sky:hover {
-            filter: brightness(1.08);
-            transform: translateY(-2px);
-        }
-
-        /* Headings */
-        .text-sky {
-            color: var(--sky-400) !important;
-        }
-
 
         .itinerary-card {
             background: linear-gradient(135deg, #ffffff, #f0f4f8);
@@ -77,15 +23,19 @@
     </style>
 </head>
 
-<body class="flex flex-col min-h-screen">
-
+<body class="flex flex-col min-h-screen bg-slate-50 text-slate-800">
 
     <main class="flex-grow p-4 sm:p-6 lg:p-10">
         <div class="max-w-4xl mx-auto rounded-3xl overflow-hidden shadow-2xl border border-slate-200">
             <div id="itinerary-header-container" class="relative">
                 <!-- Image will be loaded dynamically here -->
-                <div class="w-full h-[65px] bg-slate-200 flex items-end justify-center">
-
+                <div class="w-full h-64 bg-slate-200 flex items-center justify-center">
+                    <svg class="w-16 h-16 text-slate-400 animate-pulse" xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M12 2a3 3 0 0 0-3 3v7.35l-4.72 2.87A2 2 0 0 0 5 21h14a2 2 0 0 0 1.72-3.78L15 12.35V5a3 3 0 0 0-3-3Z" />
+                    </svg>
                 </div>
                 <div class="absolute inset-0 bg-gradient-to-t from-slate-900 via-transparent to-transparent opacity-80">
                 </div>
@@ -102,20 +52,24 @@
             <div class="p-6 sm:p-8 bg-white border-t border-slate-200">
                 <div class="mt-8 flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                     <button id="regenerate-btn"
-                        class="w-full sm:w-auto px-6 py-3 glass-btn-sky font-semibold rounded-full shadow-md hover:bg-indigo-200 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                        class="w-full sm:w-auto px-6 py-3 bg-indigo-100 text-indigo-600 font-semibold rounded-full shadow-md hover:bg-indigo-200 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         Regenerate Itinerary
                     </button>
-
-                    <a href="booking.html" id="bookTripLink"
+                    <a href="payment.html"
                         class="w-full sm:w-auto px-6 py-3 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         Book Trip Now
                     </a>
                 </div>
+                <!-- <a href="payment.html"
+                    class="block w-full text-center px-6 py-3 bg-indigo-600 text-white font-semibold rounded-full shadow-md hover:bg-indigo-700 transition-colors duration-200">
+                    Go for PAY
+                </a> -->
             </div>
         </div>
     </main>
-
     <script>
+
+
         const itinerary = JSON.parse(localStorage.getItem('tripsAIItinerary'));
         const destination = localStorage.getItem('tripsAIDestination');
 
@@ -124,33 +78,27 @@
             const subtitleElement = document.getElementById('itinerary-subtitle');
             const imageContainer = document.getElementById('itinerary-header-container');
 
-
             titleElement.textContent = itinerary.title;
             subtitleElement.textContent = `Total Estimated Cost: ₹${itinerary.totalCost.toLocaleString('en-IN')}`;
 
-            // ✅ UPDATED: Use backend-provided image_url if available, else fallback
-            let imageUrl = itinerary.image_url;
-            if (!imageUrl) {
-                const encodedDestination = encodeURIComponent(destination);
-                imageUrl = `https://placehold.co/1200x600/6366f1/ffffff?text=${encodedDestination}`;
-            }
-
+            // Generate a placeholder image based on the destination
+            const encodedDestination = encodeURIComponent(destination);
+            const imageUrl = `https://placehold.co/1200x600/6366f1/ffffff?text=${encodedDestination}`;
             imageContainer.style.backgroundImage = `url('${imageUrl}')`;
             imageContainer.style.backgroundSize = 'cover';
             imageContainer.style.backgroundPosition = 'center';
             imageContainer.style.backgroundRepeat = 'no-repeat';
             imageContainer.style.color = 'transparent';
-            imageContainer.innerHTML = `
-    <img src="${imageUrl}" alt="Background for ${destination}" class="w-full h-64 object-cover" />` + imageContainer.innerHTML;
+            imageContainer.innerHTML = `<img src="${imageUrl}" alt="Image for ${destination}" class="hidden" />` + imageContainer.innerHTML;
 
 
             const contentContainer = document.getElementById('itinerary-content');
             itinerary.days.forEach(day => {
                 const daySection = document.createElement('div');
-                daySection.className = 'glass-card p-6 rounded-2xl shadow-lg border space-y-4';
+                daySection.className = 'itinerary-day-section p-6 rounded-2xl shadow-lg border border-slate-100 bg-white space-y-4';
                 daySection.innerHTML = `
-                    <div class="flex items-center space-x-3 text-sky-600">
-                        <div class="w-8 h-8 flex items-center justify-center bg-sky-50 rounded-full font-bold">
+                    <div class="flex items-center space-x-3 text-indigo-600">
+                        <div class="w-8 h-8 flex items-center justify-center bg-indigo-50 rounded-full font-bold">
                             ${day.day}
                         </div>
                         <h2 class="text-2xl font-bold">${day.title}</h2>
@@ -158,8 +106,8 @@
                     <p class="text-slate-600 leading-relaxed">${day.summary}</p>
                     <div class="activities-grid mt-4 space-y-4">
                         ${day.activities.map(activity => `
-                            <div class="activity-item flex items-start space-x-4 p-4 glass-card rounded-xl transition-shadow hover:shadow-md">
-                                <div class="w-12 h-12 flex-shrink-0 flex items-center justify-center rounded-full glass-card text-sky">
+                            <div class="activity-item flex items-start space-x-4 p-4 bg-slate-50 rounded-xl transition-shadow hover:shadow-md">
+                                <div class="w-12 h-12 flex-shrink-0 flex items-center justify-center rounded-full bg-indigo-100 text-indigo-600">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pin-drop">
                                         <path d="M12 21.75l-7.78-7.78a5.5 5.5 0 1 1 7.78-7.78 5.5 5.5 0 1 1-7.78 7.78z" />
                                         <circle cx="12" cy="10" r="3" />
@@ -181,26 +129,6 @@
         }
 
 
-
-
-        // Set the destination on the display
-        document.getElementById('destination').textContent = itinerary.destination;
-
-        // Get the 'Book Trip Now' button and add a click event listener
-        const bookButton = document.getElementById('bookTripNowButton');
-        bookButton.addEventListener('click', () => {
-            // Store the destination in localStorage
-            localStorage.setItem('tripDestination', itinerary.destination);
-        });
-
-        // You can also use a simple link and let the JS do the storing
-        const bookLink = document.getElementById('bookTripLink');
-        if (itinerary.destination) {
-            bookLink.style.display = 'block';
-            bookLink.addEventListener('click', () => {
-                localStorage.setItem('tripDestination', itinerary.destination);
-            });
-        }
     </script>
 </body>
 
