--- a/temp copy/itinerary.html
+++ b/temp copy/itinerary.html
@@ -11,64 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide-react@latest/dist/lucide-react.js"></script>
     <style>
-        :root {
-            --glass-bg: rgba(255, 255, 255, 0.12);
-            --glass-border: rgba(255, 255, 255, 0.25);
-            --sky-400: #38bdf8;
-            --sky-500: #0ea5e9;
-            --dark-blue-900: #0f172a;
-            --dark-blue-800: #1e293b;
-        }
-
         body {
-            font-family: "Inter", sans-serif;
-            background: linear-gradient(135deg, var(--dark-blue-900), var(--dark-blue-800), var(--sky-500));
-            min-height: 100vh;
-            -webkit-font-smoothing: antialiased;
-            color: #f1f5f9;
-            /* white-ish text for contrast */
+            font-family: 'Inter', sans-serif;
+            background-color: #f8fafc;
         }
-
-        /* Glass panels */
-        .glass-panel {
-            background: var(--glass-bg);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
-        }
-
-        /* Stronger glass for cards */
-        .glass-card {
-            background: rgba(255, 255, 255, 0.18);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.28);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        /* Buttons */
-        .glass-btn-sky {
-            background: linear-gradient(90deg, var(--sky-400), var(--sky-500));
-            color: white;
-            border-radius: 9999px;
-            padding: 0.75rem 1.75rem;
-            font-weight: 600;
-            box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            transition: all 0.25s ease-in-out;
-        }
-
-        .glass-btn-sky:hover {
-            filter: brightness(1.08);
-            transform: translateY(-2px);
-        }
-
-        /* Headings */
-        .text-sky {
-            color: var(--sky-400) !important;
-        }
-
 
         .itinerary-card {
             background: linear-gradient(135deg, #ffffff, #f0f4f8);
@@ -77,8 +23,7 @@
     </style>
 </head>
 
-<body class="flex flex-col min-h-screen">
-
+<body class="flex flex-col min-h-screen bg-slate-50 text-slate-800">
 
     <main class="flex-grow p-4 sm:p-6 lg:p-10">
         <div class="max-w-4xl mx-auto rounded-3xl overflow-hidden shadow-2xl border border-slate-200">
@@ -102,7 +47,7 @@
             <div class="p-6 sm:p-8 bg-white border-t border-slate-200">
                 <div class="mt-8 flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                     <button id="regenerate-btn"
-                        class="w-full sm:w-auto px-6 py-3 glass-btn-sky font-semibold rounded-full shadow-md hover:bg-indigo-200 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500">
+                        class="w-full sm:w-auto px-6 py-3 bg-indigo-100 text-indigo-600 font-semibold rounded-full shadow-md hover:bg-indigo-200 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         Regenerate Itinerary
                     </button>
 
@@ -147,10 +92,10 @@
             const contentContainer = document.getElementById('itinerary-content');
             itinerary.days.forEach(day => {
                 const daySection = document.createElement('div');
-                daySection.className = 'glass-card p-6 rounded-2xl shadow-lg border space-y-4';
+                daySection.className = 'itinerary-day-section p-6 rounded-2xl shadow-lg border border-slate-100 bg-white space-y-4';
                 daySection.innerHTML = `
-                    <div class="flex items-center space-x-3 text-sky-600">
-                        <div class="w-8 h-8 flex items-center justify-center bg-sky-50 rounded-full font-bold">
+                    <div class="flex items-center space-x-3 text-indigo-600">
+                        <div class="w-8 h-8 flex items-center justify-center bg-indigo-50 rounded-full font-bold">
                             ${day.day}
                         </div>
                         <h2 class="text-2xl font-bold">${day.title}</h2>
@@ -158,8 +103,8 @@
                     <p class="text-slate-600 leading-relaxed">${day.summary}</p>
                     <div class="activities-grid mt-4 space-y-4">
                         ${day.activities.map(activity => `
-                            <div class="activity-item flex items-start space-x-4 p-4 glass-card rounded-xl transition-shadow hover:shadow-md">
-                                <div class="w-12 h-12 flex-shrink-0 flex items-center justify-center rounded-full glass-card text-sky">
+                            <div class="activity-item flex items-start space-x-4 p-4 bg-slate-50 rounded-xl transition-shadow hover:shadow-md">
+                                <div class="w-12 h-12 flex-shrink-0 flex items-center justify-center rounded-full bg-indigo-100 text-indigo-600">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pin-drop">
                                         <path d="M12 21.75l-7.78-7.78a5.5 5.5 0 1 1 7.78-7.78 5.5 5.5 0 1 1-7.78 7.78z" />
                                         <circle cx="12" cy="10" r="3" />
